2016-08-16  Andy Buckley  <andy.buckley@cern.ch>

	* Require C++11, and starting to remove Boost.

2016-02-16  Andy Buckley  <andy.buckley@cern.ch>

	* Add x-grouped xf vs Q plots to plotpdfs, and allow the user to
	control which plot groups to make.

2016-02-09  Andy Buckley  <andy.buckley@cern.ch>

	* Improvements to plotpdfs script.

	* Move scripts for installation into a bin directory.

2016-02-08  Andy Buckley  <andy.buckley@cern.ch>

	* Corrections in the lhapdf manager script for Python3 compatibility. Thanks to Frank Siegert.

2015-12-22  Andy Buckley  <andy.buckley@cern.ch>

	* Version 6.1.6 release!

2015-12-21  Andy Buckley  <andy.buckley@cern.ch>

	* Add canonical PDF.orderQCD property to Python PDF, to replace PDF.qcdOrder.

	* Add PDF::quarkMass and PDF::quarkThreshold methods to C++ and Python.

	* Fix quark integer ID mapping to Down/Up metadata keys in AlphaS
	factory routine.

2015-12-18  Andy Buckley  <andy.buckley@cern.ch>

	* Add a cstr_to_fstr function to LHAGlue.cc, for improved C++ to
	Fortran string conversion (handling length limits, padding rather
	than zero-termination, etc.)

2015-12-17  Andy Buckley  <andy.buckley@cern.ch>

	* Add PDF::print() protection against being unable to read the PDF
	set index file, so there isn't a crash for the trivial reason of
	on-screen printout formatting when the data path is restricted
	with trailing ::.

2015-12-16  Andy Buckley  <andy.buckley@cern.ch>

	* Fixes to the lhapdf script. Thanks again to Dmitry Kalinkin for
	a patch.

	* Add missing getlam4 and getlam5 functions to Fortran
	interface. Thanks to Dmitry Kalinkin for the patch.

	* Update Cython and Python interfaces to support Python3
	syntax. Thanks to Vitaly Yermolchyk for the patches!

	* Update to even newer boost.m4

2015-12-03  Andy Buckley  <andy.buckley@cern.ch>

	* Don't append the install prefix to path searches if
	$LHAPDF_DATA_PATH ends with a double-colon, ::.

	* De-inline the availablePDFSets() function, and veto duplicate